# zettel-utils

./: .gitignore  Cargo.toml  README.md  Zettel Searcher.alfredworkflow  config.toml  database.txt  index.py
src/: arguments.rs  db.rs  main.rs
src/output/: alfred.rs  mod.rs
