[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "zettel-utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"
once_cell = "1.5"
pulldown-cmark = "0.8"
rayon = "1.5"
regex = "*"
walkdir = "2.3"
toml = "0.5.8"

[dependencies.sqlx]
features = ["runtime-tokio-native-tls", "sqlite"]
version = "0.4"

# Restricted to support from sqlx
[dependencies.tokio]
features = ["macros"]
version = "0.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[profile.dev]
opt-level = 1
