[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
keywords = ["zettelkasten", "cli", "utilities"]
license = "MIT"
name = "zettel-utils"
version = "0.1.0"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"
colored = "2"
once_cell = "1.5"
rayon = "1.5"
regex = "*"
serde_json = "*"
toml = "0.5"
walkdir = "2.3"

[dependencies.sqlx]
features = ["runtime-tokio-native-tls", "sqlite"]
version = "0.4"

# Restricted to support from sqlx
[dependencies.tokio]
features = ["macros"]
version = "0.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[profile.dev]
opt-level = 1
