[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["zettelkasten", "cli", "utilities"]
license = "MIT"
name = "zettel-utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.7", features = ["derive"] }
once_cell = "1.10.0"
rayon = "1.5.1"
regex = "1.5.5"
serde_json = "1.0.79"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"
notify= "4.0.17"

[dependencies.sqlx]
features = ["runtime-tokio-native-tls", "sqlite"]
version = "0.5.11"

# Restricted to support from sqlx
[dependencies.tokio]
features = ["macros"]
version = "1.17.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[profile.dev]
opt-level = 1
